@@ -3,13 +3,17 @@
 use strict;
 use warnings;
 
-use Test::More tests => 36;
+use Test::More tests => 38;
 use Test::Builder::Tester;
 use Test::Exception;
 use PDL;
 use Test::PDL;
 
 my ( $got, $expected );
+
+# check that the defaults are as advertised
+cmp_ok( abs( $Test::PDL::OPTIONS{TOLERANCE}/1e-6 - 1 ), '<', 1e-6, 'TOLERANCE is 1e-6 by default' );
+is( $Test::PDL::OPTIONS{EQUAL_TYPES}, 1, 'EQUAL_TYPES is true by default' );
 
 $expected = 3;
 $got = long( 3,4 );
@@ -27,6 +31,7 @@ test_err( '/#\s+received value is not a PDL\n(.|\n)*/' );
 is_pdl( $got, $expected );
 test_test( 'rejects non-PDL arguments' );
 
+Test::PDL::set_options( EQUAL_TYPES => 0 );
 $expected = long( 3,4 );
 $got = pdl( 3,4 );
 test_out( "ok 1 - piddles are equal" );
@@ -38,7 +43,7 @@ $expected = long( 3,4 );
 $got = pdl( 3,4 );
 test_out( "not ok 1 - piddles are equal" );
 test_fail( +2 );
-test_err( '/#\s+types do not match\n(.|\n)*/' );
+test_err( '/#\s+types do not match \(EQUAL_TYPES is true\)\n(.|\n)*/' );
 is_pdl( $got, $expected );
 test_test( 'catches type mismatch, but only when EQUAL_TYPES is true' );
 Test::PDL::set_options( EQUAL_TYPES => 0 );
